--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "fundeat",
   "private": true,
   "dependencies": {
+    "@mapbox/mapbox-gl-geocoder": "^4.5.1",
     "@rails/webpacker": "4.2.2",
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
