--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "chartkick": "^3.2.0",
     "jquery": "^3.4.1",
     "mapbox-gl": "^1.8.1",
+    "places.js": "^1.18.1",
     "popper.js": "^1.16.1"
   },
   "devDependencies": {
