--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
     "chartkick": "^3.2.0",
+    "flatpickr": "^4.6.3",
     "jquery": "^3.4.1",
     "mapbox-gl": "^1.8.1",
     "places.js": "^1.18.1",
