--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "dependencies": {
     "@mapbox/mapbox-gl-geocoder": "^4.5.1",
+    "@mapbox/mapbox-gl-traffic": "^1.0.2",
     "@rails/webpacker": "4.2.2",
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
