--- a/config/meta.yml
+++ b/config/meta.yml
@@ -1,4 +1,4 @@
 meta_product_name: "Fundeat"
-meta_title: "FUND your local places where you enjoy to EAT"
+meta_title: "Fundeat"
 meta_description: "Fundeat enables Restaurants to easily raise money and gives private investors the opportunity to sustainably invest in their local community"
 meta_image: "fundeat-logo.png" # should exist in `app/assets/images/`
